# RC6-parcomsys-arch

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/doc/: parsysarch_lab_2021_rk6_12m_kosenkovaa_lab1.docx
lab1/include/: solution.h  utils.h
lab1/src/: main.c  solution.c  utils.c
lab2/: CMakeLists.txt  main.cu
lab2/doc/: parsysarch_lab_2021_rk6_12m_kosenkovaa_lab2.docx
lab2/include/: solution.h  utils.h
lab2/src/: solution.cu  utils.cu
